--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,22 +9,13 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
+    <TextView android:text="Mood" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/pauseButton"
-        android:layout_alignEnd="@+id/pauseButton"
-        android:layout_marginTop="87dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Happy"
-        android:id="@+id/happyButton"
-        android:layout_alignTop="@+id/mediButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="67dp"
+        android:layout_below="@+id/pauseButton"
+        android:layout_alignStart="@+id/pauseButton"
+        android:textSize="12pt" />
 
     <Button
         android:layout_width="wrap_content"
@@ -32,8 +23,7 @@
         android:text=">"
         android:id="@+id/nextButton"
         android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/imageView"
-        android:layout_alignEnd="@+id/imageView" />
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -47,16 +37,6 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Meditation"
-        android:id="@+id/mediButton"
-        android:layout_marginTop="71dp"
-        android:layout_below="@+id/pauseButton"
-        android:layout_alignLeft="@+id/pauseButton"
-        android:layout_alignStart="@+id/pauseButton" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Pause"
         android:id="@+id/pauseButton"
         android:layout_alignTop="@+id/prevButton"
@@ -66,8 +46,9 @@
         android:layout_width="300pt"
         android:layout_height="100pt"
         android:id="@+id/imageView"
+        android:minHeight="100dp"
+        android:maxHeight="100dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:minHeight="300dp" />
+        android:layout_toStartOf="@+id/textView"
+        android:layout_alignEnd="@+id/nextButton" />
 </RelativeLayout>
